# LoneWolf_Archiver

./: .editorconfig  .gitignore  .gitmodules  LoneWolf_Archiver.sln  README.md  vcpkg.json
LoneWolf_Archiver/: CMakeLists.txt  CMakeSettings.json  Drag_Folder_Here_to_Make_an_Archive.bat  HWRM_BigFile.cpp  HWRM_BigFile.h  HWRM_BigFile_Internal.cpp  HWRM_BigFile_Internal.h  LoneWolfArchiver.cpp  LoneWolf_Archiver.vcxproj  LoneWolf_Archiver.vcxproj.filters  archive_config.json  buildfile.txt  cipher.h  cipherstream.cpp  cipherstream.h  core.cpp  core.h  exceptions.h  extension.h  filestream.h  linuxfix.cpp  linuxfix.h  main.cpp  md5.cpp  md5.h  memmapfilestream.cpp  memmapfilestream.h  packages.config  stdafx.h  targetver.h  少女在河畔歌唱.txt
LoneWolf_Archiver/ThreadPool/: ThreadPool.h
LoneWolf_Archiver/archive/: archive.cpp  archive.h
LoneWolf_Archiver/buildfile/: buildfile.h  convert2utf8.cpp  genfile.cpp  parsefile.cpp  scanfiles.cpp
LoneWolf_Archiver/compressor/: compressor.cpp  compressor.h
LoneWolf_Archiver/encoding/: encoding.h
LoneWolf_Archiver/exceptions/: exceptions.h
LoneWolf_Archiver/helper/: helper.h
LoneWolf_Archiver/ipc/: ipc.h
LoneWolf_Archiver/server/: server.cpp  server.h
LoneWolf_Archiver/stream/: cipher.h  cipherstream.cpp  cipherstream.h  filestream.cpp  filestream.h  memmapfilestream.cpp  memmapfilestream.h
LoneWolf_Archiver_Dotnet/: AssemblyInfo.cpp  LoneWolf_Archiver_Dotnet.cpp  LoneWolf_Archiver_Dotnet.h  LoneWolf_Archiver_Dotnet.vcxproj  LoneWolf_Archiver_Dotnet.vcxproj.filters
LoneWolf_Archiver_GUI/: App.xaml  App.xaml.cs  ExtractProgress.xaml  ExtractProgress.xaml.cs  LoneWolf_Archiver_GUI.csproj  MainWindow.xaml  MainWindow.xaml.cs
LoneWolf_Archiver_GUI/Properties/: AssemblyInfo.cs  Resources.Designer.cs  Settings.Designer.cs
LoneWolf_Archiver_GUI_t/: LoneWolf_Archiver_GUI.csproj  packages.config
LoneWolf_Archiver_GUI_t/Properties/: Resources.Designer.cs  Settings.Designer.cs
LoneWolf_Archiver_Lib/: LoneWolfArchiver.cpp  LoneWolfArchiver.h  LoneWolf_Archiver_Lib.vcxproj  LoneWolf_Archiver_Lib.vcxproj.filters  core.cpp  core.h  export.cpp  export.h
LoneWolf_Archiver_Lib/ThreadPool/: ThreadPool.cpp
LoneWolf_Archiver_Lib/archive/: archive.cpp  archive.h
LoneWolf_Archiver_Lib/buildfile/: buildfile.h  genfile.cpp  parsefile.cpp  scanfiles.cpp
LoneWolf_Archiver_Lib/compressor/: compressor.cpp  compressor.h
LoneWolf_Archiver_Lib/encoding/: encoding.cpp  encoding.h
LoneWolf_Archiver_Lib/exceptions/: exceptions.cpp  exceptions.h
LoneWolf_Archiver_Lib/helper/: helper.cpp  helper.h
LoneWolf_Archiver_Lib/ipc/: ipc.cpp
LoneWolf_Archiver_Lib/stream/: cipher.cpp  cipher.h  cipherstream.cpp  cipherstream.h  filestream.cpp  filestream.h  memmapfilestream.cpp  memmapfilestream.h
Test/: Test.vcxproj  Test.vcxproj.filters  archive_config.json  basic_read.cpp  basic_readwrite.cpp  english.big  helper.h
docs/: docs_config
docs/html/: _h_w_r_m___big_file_8cpp.html  _h_w_r_m___big_file_8h.html  _h_w_r_m___big_file_8h_source.html  _h_w_r_m___big_file___internal_8h_source.html  annotated.html  cipher_8h_source.html  cipherstream_8h_source.html  class_big_file-members.html  class_big_file.html  class_big_file___internal-members.html  class_big_file___internal.html  class_cipher_stream-members.html  class_cipher_stream.html  class_file_io_error-members.html  class_file_io_error.html  class_file_stream-members.html  class_file_stream.html  class_format_error-members.html  class_format_error.html  class_m_d5-members.html  class_m_d5.html  class_mem_map_file_stream-members.html  class_mem_map_file_stream.html  class_not_implemented_error-members.html  class_not_implemented_error.html  class_out_of_range_error-members.html  class_out_of_range_error.html  class_zlib_error-members.html  class_zlib_error.html  classes.html  classread_data_proxy-members.html  classread_data_proxy.html  dir_e9cbdf15fc54e4b568fa4abe8bc11df0.html  exceptions_8h_source.html  files.html  filestream_8h_source.html  functions.html  functions_func.html  functions_vars.html  hierarchy.html  (+36 more)
docs/html/search/: all_0.js  all_1.js  all_10.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_7.js  classes_8.js  classes_9.js  functions_1.js  searchdata.js  variables_1.js  variables_2.js  variables_3.js  variables_5.js  variables_6.js  variables_7.js  variables_9.js
src/: CMakeLists.txt  HWRM_BigFile.cpp  HWRM_BigFile_Internal.cpp  HWRM_BigFile_Internal.h  archive_config.json  linuxfix.cpp  linuxfix.h
src/buildfile/: convert2utf8.cpp  genfile.cpp  parsefile.cpp
src/stream/: cipherstream.cpp  cipherstream.h  memmapfilestream.cpp  memmapfilestream.h
